4.17

- Fixed: Camps were not immediately set to indestructable after creation
- Fixed: When engineer full was enabled repair and refuel ability was also restored when the player was revived or respawned at a MHQ/Farp/squad leader