@@ -16,6 +16,9 @@ if (!hasInterface || {(_this # 3) != "Heal" || {isNil {(_this # 0) getVariable "
 	player setBleedingRemaining 0;
 	
 	if (d_with_ranked || {d_database_found}) then {
-		[_this, d_name_pl, d_ranked_a # 7] remoteExecCall ["d_fnc_ampoi", 2];
+		private _ow = (_this select 0) getVariable "d_owner";
+		if (!isNil "_ow") then {
+			[_ow, d_ranked_a # 7, 11] remoteExecCall ["d_fnc_addscore", 2]
+		};
 	};
 };
