@@ -16,6 +16,7 @@ params ["_pl", "_score", "_reason"];
 // 8 - points for helping solving the sidemission
 // 9 - points for repairing/refueling a vehicle
 // 10 - points for healing another unit
+// 11 - points for another player healing at a player mash
 
 _pl addScore _score;
 [_reason, _score] remoteExecCall ["d_fnc_scoreadded", _pl];
